--- a/Web_Server_Final_Games/Views/Home/PersonalInfo.cshtml
+++ b/Web_Server_Final_Games/Views/Home/PersonalInfo.cshtml
@@ -12,4 +12,5 @@
    <p>Right now Danae is a senior at the University of Cincinnati going half time for a bachleor's in IT with a focus in Software Application Development. Aaron is a junior going
        full time for a bachelor's in IT with a focus in Software Application Development as well!
    </p>
-   <img src="~/Images/AaronImage.png" />
+<img src="/Images/Danae_Image.jpg" alt="Danae Brenner" height="500px" width="500px"/>
+<img src="/Images/Aaron_Image.png" alt-="Aaron Kitelinger" height="500px" width="500px"/>
