Migrations, Adding VCiews and Trying to get the database to work

--- a/Web_Server_Final_Games/Views/Home/Index.cshtml
+++ b/Web_Server_Final_Games/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@{
+﻿@model IEnumerable<Games>
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to our site</h1>
+    <p>Here is a list of all our favorite games!</p>
+    <h3>List of Games</h3>
+    <p> Here we will talk about our favorite games!</p>
+    
+    
 </div>
