--- a/Web_Server_Final_Games/Views/Home/PersonalInfo.cshtml
+++ b/Web_Server_Final_Games/Views/Home/PersonalInfo.cshtml
@@ -3,14 +3,14 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<h2>Welcome to our site!</h2>
+<h2>A little bit about us!</h2>
 
-<p>Hello! Welcome to our game site. Our names are Danae Brenner and Aaron Kitelinger</p><br/>
+<p>Our names are Danae Brenner and Aaron Kitelinger</p><br/>
 <p>We chose to make this website because we both share a love of games! Aaron's favorite games are video games! Some of his favorites include Outer Wilds and Elden Ring.
    Danae's favorite games are puzzles and classic PS2 games. Danae's favorite games are dance games!</p> <br />
 
    <p>Right now Danae is a senior at the University of Cincinnati going half time for a bachleor's in IT with a focus in Software Application Development. Aaron is a junior going
        full time for a bachelor's in IT with a focus in Software Application Development as well!
    </p>
-<img src="/Images/Danae_Image.jpg" alt="Danae Brenner" height="500px" width="500px"/>
-<img src="/Images/Aaron_Image.png" alt-="Aaron Kitelinger" height="500px" width="500px"/>
+<img src="/Images/Danae_Image.jpg" alt="Danae Brenner" height="500" width="500"/>
+<img src="/Images/Aaron_Image.png" alt-="Aaron Kitelinger" height="500" width="500"/>
