--- a/Web_Server_Final_Games/Views/Shared/_Layout.cshtml
+++ b/Web_Server_Final_Games/Views/Shared/_Layout.cshtml
@@ -24,6 +24,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PersonalInfo">Personal Info</a>
                         </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OuterWilds">Outer Wilds</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="EldenRing">Elden Ring</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Add">Add</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Delete">Delete</a>
+                        </li>
                     </ul>
                 </div>
             </div>
